Add a question model and imported JSON to firebase to show the data on server

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,11 +2,12 @@
 
 We hope you find answers for questions you are looking for !!!
 
-<!-- <ul>
-  {{#each model as |rental|}}
-     <li>{{rental.owner}}'s {{rental.type}} in {{rental.city}}</li>
+<ul>
+  {{#each model as |question|}}
+     <li>{{question.content}} <br>  -{{question.author}}' <br> notes-{{question.notes}}</li>
   {{/each}}
-</ul> -->
+</ul>
+
 <br>
 <hr>
 {{#link-to 'about'}}About{{/link-to}}<br>
