--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,9 +4,11 @@ We hope you find answers for questions you are looking for !!!
 
 <ul>
   {{#each model as |question|}}
-     <li>{{question.content}} <br>  -{{question.author}}' <br> notes-{{question.notes}}</li>
+     {{question-tile question=question destroyQuestion="destroyQuestion"}}
   {{/each}}
 </ul>
+
+{{new-question saveQuestion2="saveQuestion3"}}
 
 <br>
 <hr>
