--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,2 +1,3 @@
  <li>{{question.content}} <br>  -{{question.author}}' <br> notes-{{question.notes}}</li>
+ {{update-question question=question update="update"}}
  <button class="btn btn-danger"{{action 'delete' question}}>Delete Question</button>
