add a dynamic route for question to route to a link to a different page and show question content

--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -1,5 +1,5 @@
 {{#if updateQuestionForm}}
-<h4>Update {{question.author}}'s {{question.content}}</h4>
+<h4>Edit {{question.author}}'s question</h4>
 <div>
   <form>
     <div class="form-group">
@@ -14,9 +14,9 @@
       <label for="notes">Notes</label>
       {{input value=notes id="notes" placeholder=question.notes}}
     </div>
-    <button {{action 'update' question}}>Update</button>
+    <button class="btn btn-info"{{action 'update' question}}>Update</button>
   </form>
 </div>
 {{else}}
-  <button {{action 'updateQuestionForm'}}>Update</button>
+  <button class="btn btn-info" {{action 'updateQuestionForm'}}>Update</button>
 {{/if}}
