--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,7 @@ We hope you find answers for questions you are looking for !!!
 
 <ul>
   {{#each model as |question|}}
-     {{question-tile question=question update="update" destroyQuestion="destroyQuestion"}}
+     {{question-tile question=question}}
   {{/each}}
 </ul>
 
