--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,3 +1,3 @@
- <li>{{question.content}} <br>  -{{question.author}}' <br> notes-{{question.notes}}</li>
- {{update-question question=question update="update"}}
- <button class="btn btn-danger"{{action 'delete' question}}>Delete Question</button>
+<li>
+  {{#link-to 'question' question.id}}{{question.content}} {{/link-to}}
+</li>
