--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,4 +1,20 @@
-
-{{!-- Feel free to remove this! --}}
-
+<div class="jumbotron">
+    <h1> Welcome to Query! </h1>
+  <nav>
+    {{#link-to 'index'}}Home{{/link-to}}
+    {{#link-to 'about'}}About{{/link-to}}
+    {{#link-to 'contact'}}Contact{{/link-to}}
+  </nav>
+</div>
+<div class="container">
 {{outlet}}
+</div>
+
+<hr>
+<footer>
+  <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/github-logo.png" alt="github logo" id="github"></a>
+  <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
+    <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/pinterest-logo.png" alt="pinterest logo" id="pinterest"></a>
+  <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/facebook-logo.png" alt="facebook logo" id="facebook"></a>
+
+</footer>
