--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,3 +1,9 @@
+/*google fonts*/
+* {
+  font-family: 'Josefin Sans', sans-serif;
+}
+
+/*styling for social media icons*/
 #github {
   display: inline-block;
   width: 43px;
@@ -20,4 +26,33 @@
   display: inline-block;
   width: 40px;
   position:relative;
+}
+
+/*styling for jumbotron*/
+.jumbotron {
+  background-color: #292F36;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  color: white;
+}
+
+/*styling for nav bar*/
+nav {
+ background-color: #FF6B6B;
+  padding: 10px;
+}
+
+nav a {
+  text-decoration: none;
+  text-align: center;
+  color: white;
+  font-size: 18px;
+}
+
+/*styling for logo*/
+#logo{
+  float: left;
+  width: 100px;
+  padding-right: 10px;
+  margin: 5px;
 }
