--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,9 +1,10 @@
 <div class="jumbotron">
-    <h1> Welcome to Query! </h1>
+  <img src="img/Q-and-A.jpeg" alt="logo" id="logo">
+    <h1> Query </h1>
   <nav>
-    {{#link-to 'index'}}Home{{/link-to}}
-    {{#link-to 'about'}}About{{/link-to}}
-    {{#link-to 'contact'}}Contact{{/link-to}}
+    {{#link-to 'index'}}HOME{{/link-to}} /
+    {{#link-to 'about'}}ABOUT{{/link-to}} /
+    {{#link-to 'contact'}}CONTACT{{/link-to}}
   </nav>
 </div>
 <div class="container">
@@ -16,5 +17,6 @@
   <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
     <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/pinterest-logo.png" alt="pinterest logo" id="pinterest"></a>
   <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/facebook-logo.png" alt="facebook logo" id="facebook"></a>
-
+  {{#link-to 'about'}}About{{/link-to}}<br>
+  {{#link-to 'contact'}}Click here to contact us.{{/link-to}}
 </footer>
