--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -1,13 +1,17 @@
-<p>Query Representatives would love to help you choose a destination or answer any burning questions you may have.</p>
+<div class="contact-page">
+  <br>
+  <p>Query Representatives would love to help you choose a destination or answer any burning questions you may have.</p>
 
-<p>Contact us today!</p>
+  <p>Contact us today!</p>
+  <p>
+    Query Headquarters<br>
+    400 SW 6th Ave #800<br>
+     Portland, OR 97204
+  </p>
+  <div style="width: 100%"><iframe width="100%" height="350" src="https://www.maps.ie/create-google-map/map.php?width=100%&amp;height=600&amp;hl=en&amp;coord=45.52062230000001,-122.67739840000002&amp;q=sw%206th%20ave+(Query)&amp;ie=UTF8&amp;t=&amp;z=12&amp;iwloc=A&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/it/misura-distanza-area-google-maps.html">www.mapsdirections.info</a></iframe></div><br />
 
-<p>
-  Query Headquarters<br>
-  6771 NW 163rd Ave<br>
-  Portland, OR 97233
-</p>
+  <p>(503) 555-1212</p>
 
-<p>(503) 555-1212</p>
+  <p>sowmya@query.com</p>
 
-<p>sowmya@query.com</p>
+</div>
