Add model answer to add answers to questions

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,14 +1,25 @@
+
 <h1> Welcome to Query Message Board </h1>
 
 We hope you find answers for questions you are looking for !!!
+<div class="container">
+  <ul>
+    {{#each model.questions as |question|}}
+       {{question-tile question=question}}
+    {{/each}}
+  </ul>
+</div>
 
-<ul>
-  {{#each model as |question|}}
-     {{question-tile question=question}}
-  {{/each}}
-</ul>
 
 {{new-question saveQuestion2="saveQuestion3"}}
+
+<h2> All answers </h2>
+
+<ul>
+  {{#each model.answers as |answer|}}
+    <li>{{answer.content}} - by {{answer.author}}</li>
+  {{/each}}
+</ul>
 
 <br>
 <hr>
