Add functionality to delete each answer associated with that question

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -13,15 +13,10 @@ We hope you find answers for questions you are looking for !!!
 
 {{new-question saveQuestion2="saveQuestion3"}}
 
-<h2> All answers </h2>
+<h2> Answers feed </h2>
 
 <ul>
   {{#each model.answers as |answer|}}
     <li>{{answer.content}} - by {{answer.author}}</li>
   {{/each}}
 </ul>
-
-<br>
-<hr>
-{{#link-to 'about'}}About{{/link-to}}<br>
-{{#link-to 'contact'}}Click here to contact us.{{/link-to}}
