--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -2,5 +2,8 @@
 
 
 
-{{question-detail question=model destroyQuestion="destroyQuestion"}}
+{{question-detail question=model destroyQuestion="destroyQuestion" destroyAnswer="destroyAnswer"}}
+
 {{update-question question=model update="update"}}
+
+{{new-answer saveAnswer="saveAnswer" question=model}}
