--- a/app/templates/components/question-detail.hbs
+++ b/app/templates/components/question-detail.hbs
@@ -1,4 +1,12 @@
-More information on {{question.content}} <br>asked by {{question.author}}<br>
-Add few extra notes to {{question.notes}}
+More information on {{question.content}} <br> asked by {{question.author}}<br>
+ {{question.notes}}
 <br>
+
+<h2> Answers </h2>
+<ul>
+  {{#each question.answers as |answer|}}
+  {{answer-tile answer=answer destroyAnswer="destroyAnswer"}}
+  {{/each}}
+</ul>
+
 <button class="btn btn-danger" {{action 'delete' question}}>Delete</button>
