--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -12,11 +12,11 @@
     </div>
     <div class="form-group">
       <label for="notes">Notes</label>
-      {{input value=notes id="notes"}}
+      {{input value=notes id="notes" }}
     </div>
     <button {{action 'saveQuestion1'}}>Save</button>
   </form>
 </div>
 {{else}}
-<button class="btn btn-info" {{action 'questionFormShow'}}>New Question</button>
+<button id="new-question"class="btn btn-info" {{action 'questionFormShow'}}>New Question</button>
 {{/if}}
