--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,3 +1,8 @@
 <li>
-  {{#link-to 'question' question.id}}{{question.content}} {{/link-to}}
+  <blockquote class="blockquote">
+    <p class="mb-0">{{#link-to 'question' question.id}}{{question.content}} {{/link-to}}</p>
+      <footer class="blockquote-footer">
+      {{question.author}}
+    </footer>
+  </blockquote>
 </li>
