--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,22 +1,15 @@
 
-<h1> Welcome to Query Message Board </h1>
+  <div class="row-question">
+    <div class="col-md-8">
+      {{#each model.questions as |question|}}
+        {{question-tile question=question update="update" destroyQuestion="destroyQuestion"}}
+      {{/each}}
+    </div>
+    <div class="col-md-3">
+      <h1>Ask a question?</h1>
+      <div class="row-question">
+        {{new-question saveQuestion2="saveQuestion3"}}
+      </div>
+    </div>
 
-We hope you find answers for questions you are looking for !!!
-<div class="container">
-  <ul>
-    {{#each model.questions as |question|}}
-       {{question-tile question=question}}
-    {{/each}}
-  </ul>
-</div>
-
-
-{{new-question saveQuestion2="saveQuestion3"}}
-
-<h2> Answers feed </h2>
-
-<ul>
-  {{#each model.answers as |answer|}}
-    <li>{{answer.content}} - by {{answer.author}}</li>
-  {{/each}}
-</ul>
+  </div>
