Add a screenshot to the README page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -87,8 +87,12 @@ li{
 }
 
 /*blockquote styling*/
-.blockquote-footer{
+.blockquote-question{
   font-size: 18px;
+}
+
+.delete-question-button{
+  float: top;
 }
 
 .blockquote{
