--- a/app/templates/components/question-tile.hbs
+++ b/app/templates/components/question-tile.hbs
@@ -1,7 +1,7 @@
 <li>
   <blockquote class="blockquote">
     <p class="mb-0">{{#link-to 'question' question.id}}{{question.content}} {{/link-to}}</p>
-      <footer class="blockquote-footer">
+      <footer class="blockquote-question">
       {{question.author}}
     </footer>
   </blockquote>
