--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,7 +1,6 @@
 
-<div class="delete-question-button">
-  {{question-detail question=model destroyQuestion="destroyQuestion" destroyAnswer="destroyAnswer"}}
-</div>
+  {{update-question question=model update="update"}}
 
+  {{question-detail question=model destroyQuestion="destroyQuestion" destroyAnswer="destroyAnswer"}}
 
 {{new-answer saveAnswer="saveAnswer" question=model}}
