--- a/app/templates/contact.hbs
+++ b/app/templates/contact.hbs
@@ -8,10 +8,12 @@
     400 SW 6th Ave #800<br>
      Portland, OR 97204
   </p>
-  <div style="width: 100%"><iframe width="100%" height="350" src="https://www.maps.ie/create-google-map/map.php?width=100%&amp;height=600&amp;hl=en&amp;coord=45.52062230000001,-122.67739840000002&amp;q=sw%206th%20ave+(Query)&amp;ie=UTF8&amp;t=&amp;z=12&amp;iwloc=A&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/it/misura-distanza-area-google-maps.html">www.mapsdirections.info</a></iframe></div><br />
+
 
   <p>(503) 555-1212</p>
 
   <p>sowmya@query.com</p>
 
 </div>
+
+<iframe width="100%" height="350" src="https://www.maps.ie/create-google-map/map.php?width=100%&amp;height=600&amp;hl=en&amp;coord=45.52062230000001,-122.67739840000002&amp;q=sw%206th%20ave+(Query)&amp;ie=UTF8&amp;t=&amp;z=12&amp;iwloc=A&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"><a href="https://www.mapsdirections.info/it/misura-distanza-area-google-maps.html">www.mapsdirections.info</a></iframe>
