--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -1,6 +1,5 @@
+ {{question-detail question=model update="update" destroyQuestion="destroyQuestion" destroyAnswer="destroyAnswer"}}
 
-  {{update-question question=model update="update"}}
-
-  {{question-detail question=model destroyQuestion="destroyQuestion" destroyAnswer="destroyAnswer"}}
-
+<!-- {{update-question question=model update="update"}} -->
+<br>
 {{new-answer saveAnswer="saveAnswer" question=model}}
