--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <img src="img/Q-and-A.jpeg" alt="logo" id="logo">
+  <img src="/img/Q-and-A.jpeg" alt="logo" id="logo">
     <h1> Query </h1>
   <nav>
     {{#link-to 'index'}}HOME{{/link-to}} /
@@ -17,8 +17,8 @@
 <br>
 <hr>
 <footer>
-  <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/github-logo.png" alt="github logo" id="github"></a>
-  <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
-    <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/pinterest-logo.png" alt="pinterest logo" id="pinterest"></a>
-  <a href="https://github.com/sowmyadsl" target="_blank"><img src="img/facebook-logo.png" alt="facebook logo" id="facebook"></a>
+  <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/github-logo.png" alt="github logo" id="github"></a>
+  <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
+    <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/pinterest-logo.png" alt="pinterest logo" id="pinterest"></a>
+  <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/facebook-logo.png" alt="facebook logo" id="facebook"></a>
 </footer>
