--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -103,3 +103,27 @@ background: #f9f9f9;
 .row-question{
   margin-top: 20px;
 }
+
+#delete-question-button{
+  margin-right: 30px;
+  margin-top: -60px;
+  float: right;
+}
+
+#update-question-button{
+  margin-right: 100px;
+  margin-top: -40px;
+  float: right;
+}
+
+#content{
+  width: 100%;
+  height: 150px;
+  word-wrap: break-word;
+  font-size: 15px;
+}
+
+.q-author{
+  font-size: 20px;
+  font-style: italic;
+}
