--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -18,7 +18,7 @@
 <hr>
 <footer>
   <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/github-logo.png" alt="github logo" id="github"></a>
-  <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
+  <a href="https://www.instagram.com/sowmyadsl/?hl=en" target="_blank"><img src="/img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
     <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/pinterest-logo.png" alt="pinterest logo" id="pinterest"></a>
   <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/facebook-logo.png" alt="facebook logo" id="facebook"></a>
 </footer>
