--- a/app/templates/components/update-question.hbs
+++ b/app/templates/components/update-question.hbs
@@ -18,5 +18,5 @@
   </form>
 </div>
 {{else}}
-  <button class="btn btn-info" {{action 'updateQuestionForm'}}>Update</button>
+  <button id="update-question-button" class="btn btn-info" {{action 'updateQuestionForm'}}>Update</button>
 {{/if}}
