--- a/app/templates/question.hbs
+++ b/app/templates/question.hbs
@@ -2,4 +2,5 @@
 
 <!-- {{update-question question=model update="update"}} -->
 <br>
+<h1>Add answer to this question?</h1>
 {{new-answer saveAnswer="saveAnswer" question=model}}
