Add styling and fonts to the page

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -121,9 +121,20 @@ background: #f9f9f9;
   height: 150px;
   word-wrap: break-word;
   font-size: 15px;
+  margin: 0;
+  padding: 0;
+}
+input[type="text"] {
+  display: block;
+  margin: 0;
+  width: 100%;
+  font-family: sans-serif;
+  font-size: 18px;
+  appearance: none;
+  box-shadow: none;
+  border-radius: none;
 }
 
-.q-author{
-  font-size: 20px;
+.q-notes{
   font-style: italic;
 }
