--- a/app/templates/components/answer-tile.hbs
+++ b/app/templates/components/answer-tile.hbs
@@ -1,3 +1,4 @@
+<br>
 <li>
   <div class="row">
     <div class="col-md-8">
@@ -7,7 +8,8 @@
           {{answer.author}}
         </footer>
       </blockquote>
-    </div>  
+    </div>
   </div>
 </li>
-<button {{action 'delete' answer}}>Delete Answer</button>
+
+<button class="btn btn-danger"{{action 'delete' answer}}>Delete</button>
