--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -21,4 +21,5 @@
   <a href="https://www.instagram.com/sowmyadsl/?hl=en" target="_blank"><img src="/img/instagram-logo.png" alt="instagram logo" id="instagram"></a>
     <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/pinterest-logo.png" alt="pinterest logo" id="pinterest"></a>
   <a href="https://github.com/sowmyadsl" target="_blank"><img src="/img/facebook-logo.png" alt="facebook logo" id="facebook"></a>
+  <p class="copyright" > © 2017 Copyright by sowmya </p>
 </footer>
