--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -100,6 +100,19 @@ border-left: 10px solid #FF6B6B;
 background: #f9f9f9;
 }
 
+.blockquote-answer{
+  font-size: 15px;
+  font-style: italic;
+  color: #586994;
+  text-align: right;
+}
+
+#answer-tile{
+  text-align: justify;
+  background: #F9F9F9;
+  border-left: 2px solid #586994;
+}
+
 .row-question{
   margin-top: 20px;
 }
@@ -115,30 +128,34 @@ background: #f9f9f9;
   margin-top: -40px;
   float: right;
 }
-
 #content{
-  width: 100%;
-  height: 150px;
-  word-wrap: break-word;
-  font-size: 15px;
-  margin: 0;
-  padding: 0;
-}
-input[type="text"] {
-  display: block;
-  margin: 0;
-  width: 100%;
-  font-family: sans-serif;
-  font-size: 18px;
-  appearance: none;
-  box-shadow: none;
-  border-radius: none;
+    padding-top: 0;
+    padding-left: 0;
+    height: 100px;
+    position: relative;
+    left: 0;
+    outline: none;
+    border: 1px solid #cdcdcd;
+    border-color: rgba(0,0,0,.15);
+    background-color: white;
+    font-size: 16px;
 }
 
 .q-notes{
   font-style: italic;
 }
 
-#upvote ,#downvote{
-  width: 22px;
+#upvote{
+  width: 28px;
+  margin-left: 2px;
+  margin-right: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+#downvote{
+  width: 28px;
+  margin-right: 2px;
+  margin-left: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
 }
