--- a/app/templates/components/new-answer.hbs
+++ b/app/templates/components/new-answer.hbs
@@ -8,7 +8,7 @@
       </div>
       <div class="form-group">
         <label for="content">Content</label>
-        {{input value=content id="content"}}
+        {{textarea value=content id="content"}}
       </div>
       <button {{action 'saveAnswer'}}>Save</button>
     </form>
