--- a/app/templates/components/new-question.hbs
+++ b/app/templates/components/new-question.hbs
@@ -4,7 +4,7 @@
   <form>
     <div class="form-group">
       <label for="content">Content</label>
-      {{input value=content id="content"}}
+      {{textarea value=content id="content"}}
     </div>
     <div class="form-group">
       <label for="author">Author</label>
